apps/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - env:
            - name: TZ
              value: Africa/Johannesburg
          image: ghcr.io/seerr-team/seerr:latest
          livenessProbe:
            exec:
              command:
                - wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
          name: seerr
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: seerr-config
      restartPolicy: Always
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config
