apps/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seerr.doink.co.za`)
      services:
        - name: seerr-seerr-chart
          port: 80
  tls:
    secretName: seerr-tls
